--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
